apps/dev-tewind-space/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-tewind-space
  namespace: haenu
  labels:
    app: dev-tewind-space
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-tewind-space
  template:
    metadata:
      labels:
        app: dev-tewind-space
    spec:
      containers:
      - name: dev-tewind-space
        image: hyeonwoo5342/dev-tewind-space:5
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: '700Mi'
            cpu: '250m'
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
